--- a/Citizen Science in den Geschichtswissenschaften Chatprotokoll.html
+++ b/Citizen Science in den Geschichtswissenschaften Chatprotokoll.html
@@ -232,7 +232,7 @@ body {
             <div class="chat">
               <div class="message" title="Jens">
                 <img src="Pictures/cs_chat_JEB.JPG" title="Jens"/>
-                <div><p>Kannst Du das gestapelt erschließen? <a href="https://www.vr-elibrary.de/doi/book/10.14220/9783737015714">doi:10.14220/9783737015714</a> </p></div>
+                <div><p>Kannst Du das gestapelt erschließen? <a href="https://www.vr-elibrary.de/doi/book/10.14220/9783737015714"  target="_blank">doi:10.14220/9783737015714</a> </p></div>
               </div>
               <div class="message">
                 <img src="Pictures/cs_chat_JEB.JPG" title="Jens"/>
@@ -259,13 +259,13 @@ body {
               <div class="message me">
                 <img src="Pictures/cs_chat_ERCH.jpg" title="Chris"/>
                 <div><p>
-                    bei einigen fehlen Autorinnen-Items und natürlich Schlagwörter. Scholia <a href="https://scholia.toolforge.org/venue/Q119087384">scholia.toolforge.org/venue/Q119087384</a>
+                    bei einigen fehlen Autorinnen-Items und natürlich Schlagwörter. Scholia <a href="https://scholia.toolforge.org/venue/Q119087384" target="_blank">scholia.toolforge.org/venue/Q119087384</a>
                   </p></div>
               </div>  
               <div class="message me">
                 <img src="Pictures/cs_chat_ERCH.jpg" title="Chris"/>
                 <div><p>
-                    Wartungs-Link: Autor:innen des Bandes. <a href="https://w.wiki/6phe">w.wiki/6phe</a> -> Können wenn fertig bearbeitet an Hrsg melden, dann können sie beim Verlag die ORCIDs nachziehen lassen.
+                    Wartungs-Link: Autor:innen des Bandes. <a href="https://w.wiki/6phe"  target="_blank">w.wiki/6phe</a> -> Können wenn fertig bearbeitet an Hrsg melden, dann können sie beim Verlag die ORCIDs nachziehen lassen.
                   </p></div>
               </div>  
             </div>
