--- a/Citizen Science in den Geschichtswissenschaften Chatprotokoll.html
+++ b/Citizen Science in den Geschichtswissenschaften Chatprotokoll.html
@@ -255,11 +255,17 @@ body {
                 <div><p>
                   Alle Infos - Titel, Autor:innennamen, DOI, Seiten sind auf einer Seite. Ich speichere die lokal ab und lass den Parser da drüberlaufen.
                   </p></div>
-              </div>  
+              </div>
               <div class="message me">
                 <img src="Pictures/cs_chat_ERCH.jpg" title="Chris"/>
                 <div><p>
-                    bei einigen fehlen Autorinnen-Items und natürlich Schlagwörter. Scholia <a href="https://scholia.toolforge.org/venue/Q119087384" target="_blank">scholia.toolforge.org/venue/Q119087384</a>
+                    So?<br/>Scholia <a href="https://scholia.toolforge.org/venue/Q119087384" target="_blank">scholia:venue/Q119087384</a>
+                  </p></div>
+              </div>   
+              <div class="message me">
+                <img src="Pictures/cs_chat_ERCH.jpg" title="Chris"/>
+                <div><p>
+                    bei einigen fehlen Autorinnen-Items und natürlich Schlagwörter.
                   </p></div>
               </div>  
               <div class="message me">
