--- a/Citizen Science in den Geschichtswissenschaften Chatprotokoll.html
+++ b/Citizen Science in den Geschichtswissenschaften Chatprotokoll.html
@@ -105,7 +105,7 @@ body {
   margin: -50px auto 0 auto;
   padding: 20px 20px 40px 20px;
   width: 300px;
-  height: 540px;
+  height: 600px;
   border-radius: 10px;
   border-bottom: 5px solid #222f3d;
   background: #34495e;
@@ -259,7 +259,7 @@ body {
               <div class="message me">
                 <img src="Pictures/cs_chat_ERCH.jpg" title="Chris"/>
                 <div><p>
-                    So?<br/>Scholia <a href="https://scholia.toolforge.org/venue/Q119087384" target="_blank">scholia:venue/Q119087384</a>
+                    So?<br/> <a href="https://scholia.toolforge.org/venue/Q119087384" target="_blank">scholia:venue/Q119087384</a>
                   </p></div>
               </div>   
               <div class="message me">
